--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "20.1.2",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "@types/react-router": "^5.1.20",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
     "flowbite": "^1.6.5",
