--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "@types/react-router": "^5.1.20",
+    "@vercel/analytics": "^1.0.1",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
     "flowbite": "^1.6.5",
