--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-config-next": "13.4.1",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.4",
+    "lottie-react": "^2.4.0",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
