--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "flowbite-react": "^0.4.4",
     "lottie-react": "^2.4.0",
     "next": "13.4.1",
+    "next-router-mock": "^0.9.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.4"
