--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next-router-mock": "^0.9.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swiper": "^9.3.2",
     "typescript": "5.0.4"
   },
   "devDependencies": {
