--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@calcom/embed-react": "^1.0.12",
     "@formspark/use-formspark": "^0.1.39",
+    "@notionhq/client": "^2.2.5",
     "@types/node": "20.1.2",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
