--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "eslint-config-next": "13.4.1",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.7",
+    "gray-matter": "^4.0.3",
     "lottie-react": "^2.4.0",
     "next": "13.4.1",
     "next-router-mock": "^0.9.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "remark": "^14.0.3",
+    "remark-html": "^15.0.2",
     "swiper": "^9.3.2",
     "typescript": "5.0.4"
   },
