--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gray-matter": "^4.0.3",
     "lottie-react": "^2.4.0",
     "next": "13.4.1",
+    "next-mdx-remote": "^4.4.1",
     "next-router-mock": "^0.9.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -32,6 +33,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2"
