--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next-router-mock": "^0.9.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-scroll-up": "^1.4.0",
     "remark": "^14.0.3",
     "remark-html": "^15.0.2",
     "swiper": "^9.3.2",
