--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "next": "13.4.1",
     "next-mdx-remote": "^4.4.1",
     "next-router-mock": "^0.9.3",
+    "notion-client": "^6.16.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-notion-x": "^6.16.0",
     "react-scroll-up": "^1.4.0",
     "remark": "^14.0.3",
     "remark-html": "^15.0.2",
