--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-notion-x": "^6.16.0",
+    "react-responsive-modal": "^6.4.2",
     "react-scroll-up": "^1.4.0",
     "remark": "^14.0.3",
     "remark-html": "^15.0.2",
