--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "18.2.4",
     "@types/react-router": "^5.1.20",
     "@vercel/analytics": "^1.0.1",
+    "aos": "^3.0.0-beta.6",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
     "flowbite": "^1.6.5",
@@ -40,6 +41,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
+    "@types/aos": "^3.0.4",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2"
