--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/aos": "^3.0.4",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "tailwindcss-animated": "^1.0.1"
   }
 }
