--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "18.2.4",
     "@types/react-router": "^5.1.20",
     "@vercel/analytics": "^1.0.1",
+    "@vercel/kv": "^0.2.2",
     "aos": "^3.0.0-beta.6",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
@@ -31,6 +32,7 @@
     "notion-client": "^6.16.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "react-notion-x": "^6.16.0",
     "react-responsive-modal": "^6.4.2",
     "react-scroll-up": "^1.4.0",
