--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-notion-x": "^6.16.0",
+    "react-player": "^2.12.0",
     "react-responsive-modal": "^6.4.2",
     "react-scroll-up": "^1.4.0",
     "remark": "^14.0.3",
